# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md  br.sh  main.cpp  r.sh  todo.txt
engine/include/: camera.hpp  cube.hpp  flash_light.hpp
engine/src/: Flash_light.cpp  camera.cpp  cube.cpp
shaders/: directional.glsl  fragment.glsl  light_fragment.glsl  light_vertex.glsl  point_light.glsl  vertex.glsl
